# swarm-ir

./: .gitignore  Cargo.toml  build.rs  c_api.h  cbindgen.toml
drafts/: control_flow_1.md  control_flow_2.md  numerics_1.md  pointers_1.md  structs_1.md
src/: abi.rs  builder.rs  c_api.rs  cf_verify.rs  correct.rs  emit.rs  instr.rs  intrinsic.rs  irparse.rs  irprint.rs  lib.rs  main.rs  metadata.rs  module.rs  numerics.rs  pass.rs  staticmem.rs  ty.rs  verify.rs
src/passes/: instr_rewrite.rs  mod.rs  peephole_opt.rs
tests/: compilation_tests.rs
tests/comp/: arithmetic.ir  arithmetic.wat  condition.ir  condition.wat  empty_fn.ir  empty_fn.wat  fail1.ir  fail1.wat  fail2.ir  fail2.wat  loop1.ir  loop1.wat  loop2.ir  loop2.wat
