[package]
name = "swarm-ir"
version = "0.1.0"
authors = ["iqbigbang <iqbigbang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libintern = "0.6"
wasm-encoder = "0.6"
# TODO: remove these, only used for testing
# wasmprinter = "0.2"
# wasmparser = "0.80"
bit-set = "0.5"
logos = { version = "0.12", optional = true }


[features]
c-api = []
opt = []
ir-parse = ["logos"]
default = ["c-api", "opt"]

[lib]
crate-type = ["lib", "cdylib"]