[package]
name = "swarm-ir"
version = "0.1.0"
authors = ["iqbigbang <iqbigbang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libintern = "0.7"
# FIXME: Once the version is bumped and the release contains PR #362, replace with proper dependency
wasm-encoder = { git = "https://github.com/bytecodealliance/wasm-tools", version = "0.7" }
# wasm-encoder = "0.7"
bit-set = "0.5"
indexmap = "1.7"
logos = { version = "0.12", optional = true }

[dev-dependencies]
wat = "1.0"
wasmparser = "0.80"
wasmprinter = "0.2"

[features]
c-api = []
opt = []
ir-parse = ["logos"]
default = ["c-api", "opt"]

[lib]
crate-type = ["lib", "cdylib"]